# coasyncpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: c_callback.cpp  c_callback_with_error.cpp  core_call.cpp  error_handling.cpp  expected_call.cpp  fib.cpp  multitasking.cpp  subcalls.cpp  variant_call.cpp  vector.cpp
include/coasyncpp/: async.hpp  async_core.hpp  async_expected.hpp  async_variant.hpp  common.hpp  scheduler.hpp
